--- a/friends.html
+++ b/friends.html
@@ -36,6 +36,18 @@
         <i class="fas fa-info-circle"></i> Friends' Names Dispaly <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+        <div class="user-component__column">
+            <img src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg" class="user-component__avatar"/>
+            <div class="user-component__text">
+                <h4 class="user-component__title">JIN</h4>
+                <h6 class="user-component__subtitle">Please check My Kokoa Account Info </h6>
+            </div>
+        </div>
+        
+        <div class="user-component__column">
+    </div>
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
