--- a/find.html
+++ b/find.html
@@ -50,6 +50,34 @@
                 <span>Invite</span>
             </div>
         </div>
+        <div class="recommended-friends">
+            <h6 class="recommended-friends__title">Recommended Friends</h6>
+            <span>You have no recommended friends.</span>
+        </div>
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4>Open Chat</h4>
+                <span class="open-chat__openchat-home">Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i></span>
+            </div>
+        </div>
+        <div class="open-post">
+            <div class="open-post__column">
+                <h5 class="open-post__title">#BTS</h5>
+                <h6 class="open-post__hashtag">#bts#army#friends</h6>
+                <div class="open-post__members">
+                    <img src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg"/>
+                    <span class="open-post__member-count">802 members</span>
+                    <div class="divider"></div>
+                    <span class="open-post__member-status">Active</span>
+                </div>
+            </div>
+            <div class="open-post__column">
+               <div class="open-post__photo">
+                <img src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg"/>
+                <div class="open-post__heart-count fa-xs"><i class="fas fa-heart"></i><span>326</span></div>
+               </div>
+            </div>
+        </div>
     </main>
     
     <nav class="nav">
