--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Chat - kokoa Clone</title>
+    <title>Settings - kokoa Clone</title>
 </head>
 
 <body>
@@ -63,32 +63,7 @@
         </ul>
     </main>
     
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html">
-                    <i class="far fa-user fa-lg"></i>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
-                    <i class="far fa-comment fa-lg"></i>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html">
-                    <i class="fas fa-search fa-lg"></i>
-                </a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <span class="nav__newellipsis"></span>
-                    <i class="fas fa-ellipsis-h fa-lg"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    
 
     <script src="https:kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
