--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Chats - kokoa Clone</title>
+    <title>Chats /w JIN - kokoa Clone</title>
 </head>
 
 <body>
@@ -34,6 +34,7 @@
     </header>
 
     <main class="friends-screen">
+        <a href="chat.html">
         <div class="user-component">
             <div class="user-component__column">
                 <img 
@@ -47,8 +48,9 @@
             <div class="user-component__column">
                 <span class="user-component__time">21:22</span>
                 <div class="badge">1</div>
+            </div>
         </div>
-        
+        </a>
 
     </main>
     <nav class="nav">
