--- a/chat.html
+++ b/chat.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="css/styles.css"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Settings - kokoa Clone</title>
+    <title>Chat /w JIN - kokoa Clone</title>
 </head>
 
-<body>
+<body id="chat-screen">
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
@@ -25,45 +25,46 @@
 
     <header class="alt-header">
         <div class="alt-header__column">
-        <a href="more.html">
+        <a href="chats.html">
             <i class="fas fa-angle-left fa-2x"></i>
         </a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">Settings</h1>
+            <h1 class="alt-header__title">JIN</h1>
         </div>
         <div class="alt-header__column">
-            <i class="fas fa-search fa-lg"></i>
+            <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="fas fa-bars fa-lg"></i> </span>
+
         </div>
     </header>
 
-    <main class="main-screen">
-        <ul class="settings-list">
-            <li class="settings__setting">
-                <div class="settings__setting-column">
-                    <i class="fas fa-bullhorn"></i>
-                    <span>Notices</span>
+    <main class="main-screen main-chat">
+        <div class="chat__timestamp">
+            Tuesday, June 30, 2020
+        </div>
+
+        <div class="message-row">
+            <img src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg">
+            <div class="message-row__content">
+                <span class="message__author">JIN</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hi!</span>
+                    <span class="message__time">21:27</span>
                 </div>
-                <div class="settings__setting-column"></div>
-            </li>
-            <li class="settings__setting">
-                <div class="settings__setting-column">
-                    <i class="fas fa-flask"></i>
-                    <span>Kokoa Lab</span>
+
+            </div>
+        </div>
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Hi nice to meet you!</span>
+                    <span class="message__time">21:27</span>
                 </div>
-                <div class="settings__setting-column"></div>
-            </li>
-            <li class="settings__setting">
-                <div class="settings__setting-column">
-                    <i class="fas fa-info-circle"></i>
-                    <span>Version</span>
-                </div>
-                <div class="settings__setting-column">Latest Verstion</div>
-            </li>
-        </ul>
+
+            </div>
+        </div>
     </main>
-    
-    
 
     <script src="https:kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
