--- a/settings.html
+++ b/settings.html
@@ -93,6 +93,6 @@
     <div id="no-mobile">
         <span>Your screen is too big.</span>
     </div>
-    <script src="https:kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9816ca244a.js" crossorigin="anonymous"></script>
 </body>
 </html>
