--- a/chat.html
+++ b/chat.html
@@ -17,8 +17,8 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
-            <i class="fas fa-battery-full"></i>
+            <span>10%</span>
+            <i class="fas fa-battery-quarter"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
@@ -30,7 +30,7 @@
         </a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">JIN</h1>
+            <h1 class="alt-header__title">Manuel Neuer</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg"></i></span>
@@ -45,9 +45,9 @@
         </div>
 
         <div class="message-row">
-            <img src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg">
+            <img src="https://4.bp.blogspot.com/-SqmzTP5UliY/WyShiVQIIyI/AAAAAAAAFTQ/2fv-Gs9g5TAWcqLFdC-kCSGp_lX5PTiQQCK4BGAYYCw/s1600/manuel%2Bneuer%2BPLAYER9%2BPROFILE%2B1.jpg">
             <div class="message-row__content">
-                <span class="message__author">JIN</span>
+                <span class="message__author">Manuel Neuer</span>
                 <div class="message__info">
                     <span class="message__bubble">Hi!</span>
                     <span class="message__time">21:27</span>
