--- a/chats.html
+++ b/chats.html
@@ -17,8 +17,8 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
-            <i class="fas fa-battery-full"></i>
+            <span>10%</span>
+            <i class="fas fa-battery-quarter"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
@@ -38,10 +38,10 @@
         <div class="user-component">
             <div class="user-component__column">
                 <img 
-                src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg" 
+                src="https://4.bp.blogspot.com/-SqmzTP5UliY/WyShiVQIIyI/AAAAAAAAFTQ/2fv-Gs9g5TAWcqLFdC-kCSGp_lX5PTiQQCK4BGAYYCw/s1600/manuel%2Bneuer%2BPLAYER9%2BPROFILE%2B1.jpg" 
                 class="user-component__avatar user-component__avatar"/>
                 <div class="user-component__text">
-                    <h4 class="user-component__title">JIN</h4>
+                    <h4 class="user-component__title">Manuel Neuer</h4>
                     <h6 class="user-component__subtitle">Please check My Kokoa Account Info </h6>
                 </div>
             </div>
