--- a/find.html
+++ b/find.html
@@ -17,8 +17,8 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
-            <i class="fas fa-battery-full"></i>
+            <span>10%</span>
+            <i class="fas fa-battery-quarter"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
@@ -62,10 +62,10 @@
         </div>
         <div class="open-post">
             <div class="open-post__column">
-                <h5 class="open-post__title">#乃木坂46</h5>
-                <h6 class="open-post__hashtag">#nogizaka46#ayame#friends</h6>
+                <h5 class="open-post__title">#Champions League</h5>
+                <h6 class="open-post__hashtag">#champions league#friends</h6>
                 <div class="open-post__members">
-                    <img src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg"/>
+                    <img src="https://www.datocms-assets.com/15991/1582036781-clthumbnail3.png?w=1000&fit=max&fm=jpg"/>
                     <span class="open-post__member-count">802 members</span>
                     <div class="divider"></div>
                     <span class="open-post__member-status">Active</span>
@@ -73,7 +73,7 @@
             </div>
             <div class="open-post__column">
                <div class="open-post__photo">
-                <img src="https://img.nogizaka46.com/blog/fourth/img/2019/10/05/5404786/0000.jpeg"/>
+                <img src="https://i.pinimg.com/originals/9a/c6/8e/9ac68e3231e6bfaaece93df2627032b9.png"/>
                 <div class="open-post__heart-count fa-xs"><i class="fas fa-heart"></i><span>326</span></div>
                </div>
             </div>
