--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
-            <i class="fas fa-battery-full"></i>
+            <span>10%</span>
+            <i class="fas fa-battery-quarter"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
@@ -30,8 +30,8 @@
     </header>
 
     <form action="friends.html" method="GET" id="login-form">
-        <input name="username" type="text" placeholder="Email or phone number"/>
-        <input name="password" type="password" placeholder="Password"/>
+        <input name="username" type="text" placeholder="Email or phone number" required/>
+        <input name="password" type="password" placeholder="Password" required/>
         <input type="submit" value="Log In"/>
         <a href="#">Find Kokoa Account or Password</a>
     </form>
