--- a/settings.html
+++ b/settings.html
@@ -17,8 +17,8 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
-            <i class="fas fa-battery-full"></i>
+            <span>10%</span>
+            <i class="fas fa-battery-quarter"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
